x axis extra space solved

--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
     margin: 0;
     padding: 0;
 }
+body{
+    overflow-x: hidden;
+}
 .header{
     background: linear-gradient(193deg, #00cfff 0%, #0b00ff 100%);
     position: fixed;
